solc_ossfuzz_seed_corpus/test_sol/test_bda7b10a7be32af4ca2a78559ab8ba77078beeb16a964a8ee5932cccbd4f6ca2_d7670a6f9f48a6b81bfb7b75232529af3a573ca7_sol.sol
==== Source:  ====

==== Source: su0.sol ====
contract C0 {
  function f0(function (bytes4, address payable) internal   returns (function (uint176) internal   returns (address payable), bool, uint32) i0,bytes10 i1) public virtual   returns(uint104 o0,address o1,bool o2)
  {
    (bool l0, bytes memory l1) = address(this).call(bytes("000000000000000000000000000000000000000000000000000000000000"));
    (bool l2, bytes memory l3) = address(this).call(bytes("ffffffffffffffffffffffffffffffffffffffffff4b353947d419bceab5152b0d4f13e4165666c8fc350728108cef87d230ee51"));
  }
  int224   s0 = int224(7234177406396985629816473970553323452200794058236033721261026956029);
  struct St0 {
    address el0;
    bool el1;
    int168 el2;
  }
}
pragma solidity >= 0.0.0;
// ----
// TypeError 4103: (su0.sol:28-156): Internal type is not allowed for public or external functions.
